--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,14 @@
+title: Jigeesha Mukhopadhyay
 
+logo: 1.png # Use a relative path to logo image 
+
+description: Genomics, transcriptomics, and phylogenetics in fungi and plants # Fix hyphenation 
+
+show_downloads: true # Fix spelling
+
+theme: jekyll-theme-minimal 
+
+plugins:
+  - jekyll-seo-tag # Add SEO plugin
+
+email: jigeesha.mukhopadhyay5@gmail.com # Allow visitors to contact you
